# CUDAMatricesTest

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cicd.yml
include/: cpu_matrix_ops.hpp  cuda_matrix_ops.hpp  matrix.hpp  matrix_utils.hpp
src/: cpu_matrix_ops.cpp  cuda_matrix_ops.cu  main.cpp  matrix.cpp  matrix_utils.cpp
tests/: matrix_operations_test.cpp
